--- a/form.html
+++ b/form.html
@@ -5,49 +5,49 @@
 		<link rel="stylesheet" href="custom.css">
 	</head>
 	<body >
-	 	<div class="container">
-			
+	 	<div class="container">	
+
 			<center>
 			  <div class="logo"><img src="logo.png" ></div>
 			</center>
-		
-			<div class="row main">
+			
+		<div class="row main">
 			   <h3 class="field heading"> Register Here </h3>
-			 <form class="form" onsubmit="return printdata();">
-			   <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
+			<form class="form" onsubmit="return printdata();">
+			  <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <label class="field control-label col-sm-12" for="fname">First Name</label>
 				    <div class="col-sm-10">
-				      <input type="text" class="form-control" id="fname" name="fname" placeholder="Enter first name" required="true" >
+				      <input type="text" class="form-control" id="fname" name="fname" placeholder="Enter first name"  >
 				    </div>
 				  </div>
-			   </div>
-			   <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
+			  </div>
+			  <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <label class=" field control-label col-sm-12" for="lname">Last Name</label>
 				    <div class="col-sm-10"> 
 				      <input type="text" class="form-control" id="lname" name="lname" placeholder="Enter last name">
 				    </div>
 				  </div>
-			   </div>
+			  </div>
 
-			   <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
+			  <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <label class=" field control-label col-sm-12" for="email">Email</label>
 				    <div class="col-sm-10"> 
-				      <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email Address" required="true" >
+				      <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email Address" >
 				    </div>
 				  </div>
-			   </div>
-			   <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
+			  </div>
+				<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <label class=" field control-label col-sm-12" for="phone">Phone Number</label>
 				    <div class="col-sm-10"> 
 				      <input type="number" class="form-control" id="phone" name="phone" placeholder="Enter Phone Number"  >
 				    </div>
 				  </div>
-			   </div>
-			   <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
+				</div>
+				<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <label class=" field control-label col-sm-12" for="phone">Gender</label>
 				    <div class="col-sm-10"> 
@@ -56,57 +56,57 @@
 				      <input type="radio" class="gender" name="gender" value="other" > <label class="field" for="other">Other </label>
 				    </div>
 				  </div>
-			   </div>
- 			   <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
+				</div>
+ 			  <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <label class=" field control-label col-sm-12" for="dob">Date of Birth</label>
 				    <div class="col-sm-10"> 
-				      <input type="date" class="form-control" id="dob" name="dob" required="true" />
+				      <input type="date" class="form-control" id="dob" name="dob" />
 				    </div>
 				  </div>
-			   </div>
-			   <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
+			  </div>
+			  <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <label class=" field control-label col-sm-12" for="nation">Nationality</label>
 				    <div class="col-sm-10"> 
 				      <select class="form-control" id="nation" name="nation">
-					<option value="Indian">Indian</option>
-                                        <option value="Other"> Other</option>
+								<option value="Indian">Indian</option>
+								<option value="Other"> Other</option>
 				      </select>
 				    </div>
 				  </div>
-			   </div>
-			   <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
+				</div>
+			  <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <label class=" field control-label col-sm-12" for="state">State</label>
 				    <div class="col-sm-10"> 
 				      <select class="form-control" id="state" name="state">
-					<option value="Andhra Pradesh">Andhra Pradesh</option>
-					<option value="Goa">Goa</option>
-					<option value="Uttar Pradesh">Uttar Pardesh</option>
-					<option value="Gujarat">Gujarat</option>
-                                        <option value="Other"> Other</option>
+								<option value="Andhra Pradesh">Andhra Pradesh</option>
+								<option value="Goa">Goa</option>
+								<option value="Uttar Pradesh">Uttar Pardesh</option>
+				   			<option value="Gujarat">Gujarat</option>
+								<option value="Other"> Other</option>
 				      </select>
 				    </div>
 				  </div>
-			   </div>
-			   <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 block">
+				</div>
+			  <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <div class="col-sm-10"> 
 				      <input type="checkbox" class="check" id="state" name="state" required="true"><label class="field" for="male">I Agree to the Terms & Conditions</label>
 				    </div>
 				  </div>
-			   </div>
-                           <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 block">
+				</div>
+        <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 block">
 				 <div class="form-group"> 
 				    <div class="col-sm-10">
 				      <button type="submit" class="btn btn-default">Submit</button>
 				    </div>
 				  </div>
-			   </div>
+			  </div>
 			</form>				  
-			</div>
-			
+		 </div>
+
 		</div>
 	<script type="text/javascript" src="main.js"> </script>
 	</body>
