--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
 			<center>
 			  <div class="logo"><img src="logo.png" ></div>
 			</center>
-			
+
 		<div class="row main">
 			   <h3 class="field heading"> Register Here </h3>
 			<form class="form" onsubmit="return printdata();">
@@ -93,7 +93,7 @@
 			  <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <div class="col-sm-10"> 
-				      <input type="checkbox" class="check" id="state" name="state" required="true"><label class="field" for="male">I Agree to the Terms & Conditions</label>
+				      <input type="checkbox" class="check" id="state" name="state" ><label class="field" for="male">I Agree to the Terms & Conditions</label>
 				    </div>
 				  </div>
 				</div>
