--- a/form.html
+++ b/form.html
@@ -13,73 +13,57 @@
 
 		<div class="row main">
 			   <h3 class="field heading"> Register Here </h3>
-			<form class="form" onsubmit="return printdata();">
+			<form class="form" >
 			  <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
-				    <label class="field control-label col-sm-12" for="fname">First Name</label>
+				    <label class="field control-label col-sm-12" for="fname">First Name <span id="err_fname" class="error"></span></label>
 				    <div class="col-sm-10">
 				      <input type="text" class="form-control" id="fname" name="fname" placeholder="Enter first name"  >
-						</div>
-						<div class="col-sm-12">
-							<span id="err_fname" class="error"></span>
 						</div>
 				  </div>
 			  </div>
 			  <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
-				    <label class=" field control-label col-sm-12" for="lname">Last Name</label>
+				    <label class=" field control-label col-sm-12" for="lname">Last Name<span id="err_lname" class="error"></span>
+						</label>
 				    <div class="col-sm-10"> 
 				      <input type="text" class="form-control" id="lname" name="lname" placeholder="Enter last name">
-						</div>
-						<div class="col-sm-12">
-								<span id="err_lname" class="error"></span>
 						</div>
 				  </div>
 			  </div>
 
 			  <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
-				    <label class=" field control-label col-sm-12" for="email">Email</label>
+				    <label class=" field control-label col-sm-12" for="email">Email<span id="err_email" class="error"></span>
+						</label>
 				    <div class="col-sm-10"> 
 				      <input type="text" class="form-control" id="email" name="email" placeholder="Enter Email Address" >
-						</div>
-						<div class="col-sm-12">
-								<span id="err_email" class="error"></span>
 						</div>
 				  </div>
 			  </div>
 				<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
-				    <label class=" field control-label col-sm-12" for="phone">Phone Number</label>
+				    <label class=" field control-label col-sm-12" for="phone">Phone Number	<span id="err_phone" class="error"></span></label>
 				    <div class="col-sm-10"> 
-				      <input type="number" class="form-control" id="phone" name="phone" placeholder="Enter Phone Number"  >
-						</div>
-						<div class="col-sm-12">
-								<span id="err_phone" class="error"></span>
+				      <input type="text" class="form-control" id="phone" name="phone" placeholder="Enter Phone Number"  >
 						</div>
 				  </div>
 				</div>
 				<div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
-				    <label class=" field control-label col-sm-12" for="phone">Gender</label>
+							<label class=" field control-label col-sm-12" for="phone">Gender <span id="err_gender" class="error"></span>  </label>
 				    <div class="col-sm-10"> 
 				      <input type="radio" class="gender" name="gender" value="male" > <label class="field" for="male">Male </label>
 				      <input type="radio" class="gender" name="gender" value="female" > <label class="field" for="female">Female </label>
 				      <input type="radio" class="gender" name="gender" value="other" > <label class="field" for="other">Other </label>
 				    </div>
 					</div>
-					<div class="col-sm-12">
-							<span id="err_gender" class="error"></span>
-					</div>
 				</div>
  			  <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
-				    <label class=" field control-label col-sm-12" for="dob">Date of Birth</label>
+				    <label class=" field control-label col-sm-12" for="dob">Date of Birth <span id="err_dob" class="error"></span></label>
 				    <div class="col-sm-10"> 
 				      <input type="date" class="form-control" id="dob" name="dob" />
-						</div>
-						<div class="col-sm-12">
-								<span id="err_dob" class="error"></span>
 						</div>
 				  </div>
 			  </div>
@@ -111,17 +95,15 @@
 			  <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 block">
 				  <div class="form-group">
 				    <div class="col-sm-10"> 
-				      <input type="checkbox" class="check" id="status" name="status" value="checked" ><label class="field" for="male">I Agree to the Terms & Conditions</label>
-						</div>
-						<div class="col-sm-12">
-								<span id="err_status" class="error"></span>
+							<input type="checkbox" class="check" id="status" name="status" value="checked" >
+							<label class="field" for="status">I Agree to the Terms & Conditions<span id="err_status" class="error"></span></label>
 						</div>
 				  </div>
 				</div>
         <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 block">
 				 <div class="form-group"> 
 				    <div class="col-sm-10">
-				      <button type="submit" class="btn btn-default">Submit</button>
+				      <button type="submit" class="btn btn-default" onclick="return validate();">Submit</button>
 				    </div>
 				  </div>
 			  </div>
