--- a/form.html
+++ b/form.html
@@ -121,5 +121,7 @@
 
 		</div>
 	<script type="text/javascript" src="main.js"> </script>
+	<script type="text/javascript" src="array.js"> </script>
+	
 	</body>
 </html>
